--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Phpstorm files
+*.iml
+.idea
+out
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 
 # testing
-/coverage
+coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
@@ -21,5 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.idea
+package-lock.json
