--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "4.5.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
     "react": "16.8.6",
