--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.8.6",
     "react-burger-menu": "^2.6.10",
     "react-dom": "16.8.6",
+    "react-helmet": "^5.2.1",
     "react-redux": "5.1.1",
     "react-router": "4.4.0-beta.8",
     "react-router-dom": "4.4.0-beta.8",
