Did so much, that I'm lazy to write

--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "4.5.0",
+    "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.1",
+    "interactjs": "^1.4.2",
     "jquery": "^3.4.0",
+    "moment": "^2.24.0",
+    "new-react-calendar-timeline": "^2.2.0",
     "popper.js": "^1.15.0",
+    "randomcolor": "^0.5.4",
     "react": "16.8.6",
     "react-burger-menu": "^2.6.10",
+    "react-calendar-timeline": "^0.25.1",
     "react-dom": "16.8.6",
     "react-helmet": "^5.2.1",
     "react-redux": "5.1.1",
