--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "5.1.1",
     "react-router": "4.4.0-beta.8",
     "react-router-dom": "4.4.0-beta.8",
+    "react-select": "^2.4.3",
     "react-yandex-maps": "^3.0.2",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
